--- a/campspring/rentACar/pom.xml
+++ b/campspring/rentACar/pom.xml
@@ -62,7 +62,11 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.6.6</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.modelmapper.extensions</groupId>
+			<artifactId>modelmapper-spring</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 
 	</dependencies>
 	<build>
